--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
- <!-- Adoric -->
- <script>
+<script>
     (function (a, d, o, r, i, c, u, p, w, m) {
     m = d.getElementsByTagName(o)[0], a[c] = a[c]
     || {}, a[c].trigger = a[c].trigger || function () {
@@ -17,8 +16,9 @@
     a[c].off = a[c].off || function () {(a[c].off.arg = a[c].off.arg || []).push(arguments)
     }, w = d.createElement(o), w.id = i, w.src = r, w.async = 1, w.setAttribute(p, u),
     m.parentNode.insertBefore(w, m), w = null}
-    )(window, document, "script", "https://27418965.adoric-om.com/adoric.js", "Adoric_Script", "adoric","29f45f85047f40552b0020f067ae4441", "data-key");
+    )(window, document, "script", "https://52479751.adoric-om.com/adoric.js", "Adoric_Script", "adoric","29f45f85047f40552b0020f067ae4441", "data-key");
     </script>
+<style>
     header {
         z-index: 10;
     }
